# nkland

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: index.md  nkmodel.md
docs/api/: nkland.md  trajectory.md  utils.md
misc/lab/: basic.ipynb  nn.ipynb
src/nkland/: __init__.py  landscape.py  trajectory.py  utils.py
tests/: __init__.py  test_landscape.py
