[tool.poetry]
name = "nkland"
version = "0.1.0"
description = "NK landscape library"
authors = ["Quentin Suire <dev@quentinsuire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "D100",   # issing docstring in public module
    "D101",   # issing docstring in public class
    "D104",   # missing docstring in public package
    "D203",   # ignore in favor of D211
    "D213",   # ignore in favor of D212
    "ANN101", # missing type annotation for `self` in method
    "TD002",  # missing author name in TODO
    "TD003",  # missing link in TODO
    "FIX002", # line contains TODO
    "ISC001", # single line implicit string concatenation
    "COM812", # missing trailing comma
    "TRY003", # long message forbidden in exceptions
    "TCH003", # typing only standard library import
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = [
    "D",
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "ANN201",  # missing return type for public function
    "SLF001",  # Private member accessed
]

[tool.ruff.lint.pylint]
max-args = 6
